<?xml version="1.0"?>
<package format="3">
  <name>camera_trigger_qt</name>
  <version>0.0.1</version>
  <description>
     Example app using QT Widgets and ROS2
  </description>
  <license>TODO: License declaration</license>
  <maintainer email="d.encabo.2018@alumnos.urjc.es">Diego Encabo</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>px4_msgs</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-quick</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
